--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,3 +1,6 @@
-<li class="list-group-item">
-	<h4>Appareil : {{ appareilName }}</h4>
+<li [ngClass]="{'list-group-item': true, 'list-group-item-success': appareilStatus === 'allumé', 'list-group-item-danger': appareilStatus === 'éteint'}">
+	<div style="width: 40px;height: 40px;background-color: red;" 
+	*ngIf="appareilStatus === 'éteint'"></div>
+	<h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Status : {{ getStatus() }}</h4>
+	<input type="text" class="form-control" [(ngModel)]="appareilName">
 </li>
