--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,6 +1,6 @@
 <li [ngClass]="{'list-group-item': true, 'list-group-item-success': appareilStatus === 'allumé', 'list-group-item-danger': appareilStatus === 'éteint'}">
-	<div style="width: 40px;height: 40px;background-color: red;" 
-	*ngIf="appareilStatus === 'éteint'"></div>
 	<h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Status : {{ getStatus() }}</h4>
-	<input type="text" class="form-control" [(ngModel)]="appareilName">
+	<a [routerLink]="[id]">Détail</a>
+	<button class="btn btn-success" (click)="onSwitchOn()" [disabled]="appareilStatus === 'allumé'">Allumer</button>
+	<button class="btn btn-danger" (click)="onSwitchOff()" [disabled]="appareilStatus === 'éteint'">Eteindre</button>
 </li>
